--- a/views/register-sitter.pug
+++ b/views/register-sitter.pug
@@ -53,4 +53,4 @@ h1 Sitters Registration Form
     button(type='submit') Add Sitter
 #sitterList
 script(src='https://unpkg.com/axios/dist/axios.min.js')
-script(src='script.js')
+script(src='/js/script.js')
